# robot-visualizer

./: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: MyThree.tsx  Robot.tsx  RobotStateCommand.tsx  RobotStateDisplay.tsx  RobotVisualization.tsx  StateInput.tsx
frontend/src/css/: Robot.module.css  RobotStateCommand.module.css  RobotStateDisplay.module.css
frontend/src/types/: RobotTypes.ts
frontend/src/utils/: socket.ts
server/: Cargo.toml
server/src/: main.rs  robot.rs
server/src/robot/: constants.rs  mod.rs  robot_state.rs
