[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "*", features = ["state"]}
tokio = { version = "1", features = ["full"] }
tracing = "*"
tracing-subscriber = "0.3"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = {version = "0.4", features = ["cors"]}
tower = "0.4"
chrono = { version = "0.4", features = ["serde"] }